// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyDisplay component should match snapshot for various currency type 1`] = `
<DocumentFragment>
  <h1
    class="ant-typography"
  >
    $60.00
  </h1>
</DocumentFragment>
`;

exports[`CurrencyDisplay component should match snapshot for various currency type 2`] = `
<DocumentFragment>
  <h1
    class="ant-typography"
  >
    €60.00
  </h1>
</DocumentFragment>
`;

exports[`CurrencyDisplay component should match snapshot for various currency type 3`] = `
<DocumentFragment>
  <h1
    class="ant-typography"
  >
    £60.00
  </h1>
</DocumentFragment>
`;
